fix(plugins/plugin-client-common): RadioTables can have gratuituous line wrapping
Fixes #5139

--- a/plugins/plugin-client-common/web/scss/components/RadioTable/Carbon.scss
+++ b/plugins/plugin-client-common/web/scss/components/RadioTable/Carbon.scss
@@ -18,7 +18,8 @@
 @import '../StructuredList/Carbon';
 
 $max-body-height: 30rem;
-$secondary-column-max-width: 8rem;
+$min-body-width: 30rem;
+$secondary-column-max-width: 9rem;
 
 [kui-theme-style] .kui--radio-table .kui--radio-table-row:hover .bx--structured-list-svg {
   fill: var(--color-text-02);
@@ -28,6 +29,7 @@ $secondary-column-max-width: 8rem;
 .kui--scrollback:not([data-is-minisplit]) {
   .kui--radio-table-body {
     max-height: $max-body-height;
+    min-width: $min-body-width;
     overflow: auto;
     display: block;
   }
